<resources>
    <string name="app_name">Troca de Jogos</string>
    <string name="title_activity_cadastro_usuario">Usuario</string>
    <string name="cadNome">Nome</string>
    <string name="cadCep">CEP</string>
    <string name="cadEmail">Email</string>
    <string name="cadTelefone">Telefone</string>
    <string name="cadSenha">Senha</string>
    <string name="cadConfirmarSenha">Confirmar Senha</string>
    <string name="deslogar">Sair</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="perfil">Perfil</string>
    <string name="esqueceuSenha">Esqueceu a senha?</string>
    <string name="registrarButton">Registre-se com o email</string>
    <string name="button_alterar_senha">ALTERAR SENHA</string>
    <string name="title_activity_chat">Chat</string>
    <string name="addGameButton">CONFIRMAR</string>
    <string name="deleteButton">REMOVER</string>
    <string name="title_activity_mapa">Mapa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
